--- a/wypozyczalnia/src/main/resources/fxml/VehicleOptions.fxml
+++ b/wypozyczalnia/src/main/resources/fxml/VehicleOptions.fxml
@@ -316,12 +316,12 @@
                                                         <Insets bottom="300.0" left="50.0" right="400.0" />
                                                     </StackPane.margin>
                                                 </TextField>
-                                                <Button mnemonicParsing="false" onAction="#deleteInsurance" text="USUŃ" StackPane.alignment="CENTER">
+                                                <Button mnemonicParsing="false" onAction="#deleteService" text="USUŃ" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="200.0" right="400.0" />
                                                     </StackPane.margin>
                                                 </Button>
-                                                <Button mnemonicParsing="false" onAction="#showDeleteInsuranceList" prefHeight="31.0" prefWidth="201.0" text="LISTA UBEZPIECZEŃ" textAlignment="CENTER" StackPane.alignment="CENTER">
+                                                <Button mnemonicParsing="false" onAction="#showDeleteInsuranceList" prefHeight="31.0" prefWidth="201.0" text="LISTA SERWISÓW" textAlignment="CENTER" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="300.0" left="700.0" right="50.0" />
                                                     </StackPane.margin>
@@ -355,12 +355,12 @@
                                     <content>
                                         <StackPane prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: white;">
                                             <children>
-                                                <TextField prefHeight="31.0" prefWidth="599.0" promptText="CENA" StackPane.alignment="CENTER">
+                                                <TextField fx:id="addServiceCenaTextField" prefHeight="31.0" prefWidth="599.0" promptText="CENA" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="300.0" left="50.0" right="400.0" />
                                                     </StackPane.margin>
                                                 </TextField>
-                                                <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="186.0" text="DODAJ" StackPane.alignment="CENTER">
+                                                <Button mnemonicParsing="false" onAction="#addService" prefHeight="39.0" prefWidth="186.0" text="DODAJ" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets right="400.0" />
                                                     </StackPane.margin>
@@ -368,12 +368,12 @@
                                                         <Cursor fx:constant="OPEN_HAND" />
                                                     </cursor>
                                                 </Button>
-                                                <DatePicker prefHeight="31.0" prefWidth="816.0" promptText="DATA ROZPOCZECIA NAPRAWY" StackPane.alignment="CENTER">
+                                                <DatePicker fx:id="addServiceDataRDatePicker" prefHeight="31.0" prefWidth="816.0" promptText="DATA ROZPOCZECIA NAPRAWY" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="200.0" left="50.0" right="400.0" />
                                                     </StackPane.margin>
                                                 </DatePicker>
-                                    <DatePicker prefHeight="31.0" prefWidth="816.0" promptText="DATA ZAKOŃCZENIA NAPRAWY">
+                                    <DatePicker fx:id="addServiceDataZDatePicker" prefHeight="31.0" prefWidth="816.0" promptText="DATA ZAKOŃCZENIA NAPRAWY">
                                        <StackPane.margin>
                                           <Insets bottom="100.0" left="50.0" right="400.0" />
                                        </StackPane.margin>
@@ -386,7 +386,7 @@
                                     <content>
                                         <StackPane prefHeight="150.0" prefWidth="200.0">
                                             <children>
-                                                <Label text="PODAJ ID UBEZPIECZENIA KTÓRY CHCESZ USUNĄĆ:" StackPane.alignment="CENTER">
+                                                <Label text="PODAJ ID SERWISU KTÓRY CHCESZ USUNĄĆ:" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="400.0" left="50.0" right="400.0" />
                                                     </StackPane.margin>
@@ -401,7 +401,7 @@
                                                         <Insets bottom="200.0" right="400.0" />
                                                     </StackPane.margin>
                                                 </Button>
-                                                <Button mnemonicParsing="false" onAction="#fillEditServiceField" prefHeight="31.0" prefWidth="201.0" text="LISTA UBEZPIECZEŃ" textAlignment="CENTER" StackPane.alignment="CENTER">
+                                                <Button mnemonicParsing="false" onAction="#showDeleteServiceList" prefHeight="31.0" prefWidth="201.0" text="LISTA UBEZPIECZEŃ" textAlignment="CENTER" StackPane.alignment="CENTER">
                                                     <StackPane.margin>
                                                         <Insets bottom="300.0" left="700.0" right="50.0" />
                                                     </StackPane.margin>
