--- a/wypozyczalnia/src/main/resources/fxml/Return.fxml
+++ b/wypozyczalnia/src/main/resources/fxml/Return.fxml
@@ -69,7 +69,7 @@
                                         <Insets bottom="100.0" left="700.0" right="50.0" />
                                     </StackPane.margin>
                                 </Button>
-                                <DatePicker fx:id="addReturnDataZwrotuDataPicker" prefHeight="31.0" prefWidth="751.0" promptText="DATA WYPOŻYCZENIA" StackPane.alignment="CENTER">
+                                <DatePicker fx:id="addReturnDataZwrotuDataPicker" prefHeight="31.0" prefWidth="751.0" promptText="DATA ZWROTU" StackPane.alignment="CENTER">
                                     <StackPane.margin>
                                         <Insets left="50.0" right="400.0" top="100.0" />
                                     </StackPane.margin>
@@ -155,7 +155,7 @@
                                         <Insets left="50.0" right="650.0" top="300.0" />
                                     </StackPane.margin>
                                 </TextField>
-                                <Button mnemonicParsing="false" onAction="#editReservation" prefHeight="39.0" prefWidth="186.0" text="ZATWIERDZ" StackPane.alignment="CENTER">
+                                <Button mnemonicParsing="false" onAction="#editReturn" prefHeight="39.0" prefWidth="186.0" text="ZATWIERDZ" StackPane.alignment="CENTER">
                                     <StackPane.margin>
                                         <Insets right="650.0" top="400.0" />
                                     </StackPane.margin>
