zwrot prawie hula

--- a/wypozyczalnia/src/main/resources/fxml/Return.fxml
+++ b/wypozyczalnia/src/main/resources/fxml/Return.fxml
@@ -130,7 +130,7 @@
                                         <Insets left="50.0" top="100.0" />
                                     </StackPane.margin>
                                 </Label>
-                                <TextField promptText="ID" StackPane.alignment="CENTER">
+                                <TextField fx:id="editReturnIdTextField" promptText="ID" StackPane.alignment="CENTER">
                                     <StackPane.margin>
                                         <Insets bottom="400.0" left="50.0" right="50.0" />
                                     </StackPane.margin>
@@ -188,7 +188,7 @@
                                         <Insets left="650.0" right="50.0" top="300.0" />
                                     </StackPane.margin>
                                 </TextField>
-                                <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="186.0" text="LISTA WYPOZYCZEŃ" StackPane.alignment="CENTER">
+                                <Button mnemonicParsing="false" onAction="#showEditReturnList" prefHeight="39.0" prefWidth="186.0" text="LISTA ZWROTÓW" StackPane.alignment="CENTER">
                                     <cursor>
                                         <Cursor fx:constant="OPEN_HAND" />
                                     </cursor>
